templates: base: fix content height
Previously, the content had a dynamic height. This resulted in the scrollbar
popping in and out, on page loads, and when a popup opened. Also the footer
jumped to the top when a page got loaded.

This patch sets a min-height of 100vh to the Lona container, to ensure that
the scrollbar is visible all the time, and the footer is at the bottom.

--- a/lona_picocss/templates/picocss/theme.css
+++ b/lona_picocss/templates/picocss/theme.css
@@ -11,8 +11,8 @@ body {
     height: calc(var(--font-size) * 2);
 }
 
-main#lona-main {
-    min-height: 75%;
+main#lona {
+    min-height: 100vh;
 }
 
 footer#lona-footer {
